Fix mentor page align

--- a/src/styles/mentor.module.css
+++ b/src/styles/mentor.module.css
@@ -2,7 +2,7 @@
   display: grid;
   font-family: Roboto;
   grid-template-columns: 1fr 1fr 1fr 1fr .35fr;
-  grid-template-rows: 300px 90px 90px 60px 300px 40px 180px 180px 180px 100px;
+  grid-template-rows: 300px 90px 90px 60px 380px 40px 200px 200px 200px 100px;
 }
 
 .item50 {
@@ -205,7 +205,7 @@
 
 .mentee {
   width: 25%;
-  height: 100%;
+  height: 90%;
   margin: 0 0 0 30px;
   /* border: 1px solid yellowgreen; */
 }
@@ -275,7 +275,7 @@
 
 .comment {
   width: 75%;
-  margin: 12% auto;
+  margin: 9% auto;
   /* font-weight: lighter;  */
   /* border: 1px solid blue; */
 }
@@ -288,7 +288,7 @@
 }
 
 .like {
-  margin: -25px 20px 0 0;
+  margin: -25px 35px 0 0;
   float: right;
   /* border: 1px solid green; */
 }
